Add and edit people, lookahead search
